--- a/Js_API_Array.html
+++ b/Js_API_Array.html
@@ -74,6 +74,102 @@
       <p><span class="syntax">arr.slice([start,end])</span> 浅拷贝arr数组的指定部分，无参拷贝整个数组，无end拷贝到数组最后，有参拷贝start到end部分不包括end，返回新数组，不会修改原数组。</p>
     </section>
     <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/indexOf" target="_blank">Array.prototyoe.indexOf()</a></h1>
+      <p><span class="syntax">arr.indexOf(searchElement,[startIndex=0])</span> 查询指定元素在arr数组的首次出现下标，searchElement不能直接写为数组，只能以插入数组的变量代替，查找起始位置startIndex是可选参默认为0，若超过arr.length - 1不查询。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/lastIndexOf" target="_blank">Array.prototype.lastIndexOf()</a></h1>
+      <p><span class="syntax">arr.lastIndexOf(searchElement,[startIndex=0])</span> 查询指定元素在arr数组的末次出现下标，用法形同indexOf()。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find" target="_blank">Array.prototype.find()</a></h1>
+      <p><span class="syntax">arr.find(function(item,index,arr){},[thisArg])</span> 找出arr数组中首个符合条件的元素并输出，用法形同some()和every()，不修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/findIndex" target="_blank">Array.prototype.findIndex()</a></h1>
+      <p><span class="syntax">arr.findIndex(function(item,index,arr){},[thisArg])</span> 找出arr数组中首个符合条件元素的下标并输出，用法形同楼上find()。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/map" target="_blank">Array.prototype.map()</a></h1>
+      <p><span class="syntax">arr.map(function(item,index,arr){},[thisArg])</span> 返回arr数组每个元素经过函数function之后返回值组成的新数组，俗称映射~，返回新数组，不修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/filter" target="_blank">Array.prototype.filter()</a></h1>
+      <p><span class="syntax">arr.filter(function(item,index,arr){},[thisArg])</span> find()的升级版，输出arr数组中所有符合条件元素，返回新数组，不修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/Reduce" target="_blank">Array.prototype.reduce()</a></h1>
+      <p><span class="syntax">arr.reduce(function(accumulator,item,index,arr){},[initialValue])</span> 从左到右把arr数组中每个元素通过函数function将arr数组缩减成一个单体值，accumulator参为初始值，亦是上次调用返回的累积值，initialValue为可选参是accumulator的第一次的值，返回累积缩减的结果，不修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/ReduceRight" target="_blank">Array.prototype.reduceRight()</a></h1>
+      <p><span class="syntax">arr.reduceRight(function(accumulator,item,index,arr){},[initialValue])</span> 作用及用法形同楼上reduce()，只是方向相反，为从右到左。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/fill" target="_blank">Array.prototype.fill()</a></h1>
+      <p><span class="syntax">arr.fill(value,[start,end])</span> 填充函数，把value参值根据start和end下标(不包括end)复制填充arr数组，start和end为可选参，默认为0和arr.length，返回修改后数组，修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/copyWithin" target="_blank">Array.prototype.copyWithin()</a></h1>
+      <p><span class="syntax">arr.copyWithin(target,[start,end])</span> 内部替换函数，把target参下标元素用根据start和end下标选中的部分元素替换掉，satrt和end用法形同楼上fill()，不修改数组长度，返回修改后数组，修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/includes" target="_blank">Array.prototype.includes()</a></h1>
+      <p><span class="syntax">arr.includes(value,[startIndex])</span> 判断arr数组中是否有value参值元素，startIndex为可选参默认为0，返回布尔值，不修改原数组。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/entries" target="_blank">Array.prototype.entries()</a></h1>
+      <p><span class="syntax">arr.entries()</span> 返回一个新的Array Iterator对象，该对象包含数组中每个索引的键/值对。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/keys" target="_blank">Array.prototype.keys()</a></h1>
+      <p><span class="syntax">arr.keys()</span> 返回一个新的Array迭代器，它包含数组中每个索引的键。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/values" target="_blank">Array.prototyope.values()</a></h1>
+      <p><span class="syntax">arr.values()</span> 返回一个新的 Array Iterator 对象，该对象包含数组每个索引的值(chrome还不支持···尼玛)。</p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank">Array.from()</a></h1>
+      <p><span class="syntax">arr.from(arrayLike,[mapFn([thisArg])])</span> 从一个类似数组或可迭代的对象中创建一个新的数组实例。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/of" target="_blank">Array.of()</a></h1>
+      <p><span class="syntax">Array.of(item1[···itemn])</span> 创建一个不定参数量的新数组实例，不考虑参数的数量或类型，和Array()构造函数区别就是参数意义不同，Array.of()参数就是value值，Array()参数是数组长度。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/toString" target="_blank">Array.prototype.toString()</a></h1>
+      <p><span class="syntax">arr.toString()</span> 效果等同于arr.join()。</p>
+    </section>
+    <section>
+      <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/toLocaleString" target="_blank">Array.prototype.toLocaleString()</a></h1>
+      <p><span class="syntax">arr.toLocaleString()</span> arr数组元素各自调用各自的toLocalString()再拼接成完整字符串。</p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
+      <h1><a href="" target="_blank"></a></h1>
+      <p><span class="syntax"></span></p>
+    </section>
+    <section>
       <h1><a href="" target="_blank"></a></h1>
       <p><span class="syntax"></span></p>
     </section>
