update Js_api add Math   in 0722

--- a/Js_API_Array.html
+++ b/Js_API_Array.html
@@ -13,6 +13,7 @@
       <ul class="header-nav">
         <li><a href="Js_API_Array.html" target="_blank">Js_API_Array</a></li>
         <li><a href="Js_API_String.html" target="_blank">Js_API_String</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math" target="_blank">Js_API_Math</a></li>
       </ul>
     </nav>
   </header>
