modify 数组 to 字符串

--- a/Js_API_String.html
+++ b/Js_API_String.html
@@ -76,15 +76,15 @@
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/slice" target="_blank">String.prototype.slice()</a></h1>
-      <p><span class="syntax">str.slice([start,end])</span> 复制str数组指定部分并返回新字符串，不包括end，默认0到length，不修改原数组。</p>
+      <p><span class="syntax">str.slice([start,end])</span> 复制str数组指定部分并返回新字符串，不包括end，默认0到length，不修改原字符串。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/split" target="_blank">String.prototype.split()</a></h1>
-      <p><span class="syntax">str.split(separator,[maxlength])</span> 把str字符串根据separator参值分割成长度不超过maxlength的数组，返回新数组，不修改原数组。</p>
+      <p><span class="syntax">str.split(separator,[maxlength])</span> 把str字符串根据separator参值分割成长度不超过maxlength的数组，返回新数组，不修改原字符串。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/substr" target="_blank">String.prototype.substr()</a></h1>
-      <p><span class="syntax">str.substr([start,length])</span> 作用用法形同slice()，唯第二个参为长度耳，不改原数组。</p>
+      <p><span class="syntax">str.substr([start,length])</span> 作用用法形同slice()，唯第二个参为长度耳，不改原字符串。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/substring" target="_blank">String.prototype.substring()</a></h1>
@@ -92,7 +92,7 @@
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/toLowerCase" target="_blank">String.prototype.toLowerCase()</a></h1>
-      <p><span class="syntax">str.toLowerCase()</span> str全部小写，返回新字符串，不修改原数组。</p>
+      <p><span class="syntax">str.toLowerCase()</span> str全部小写，返回新字符串，不修改原字符串。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/toUpperCase" target="_blank">String.prototype.toUpperCase()</a></h1>
