小点知识 to 75.Promise

--- a/Js_API_Array.html
+++ b/Js_API_Array.html
@@ -28,11 +28,11 @@
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push" target="_blank">Array.prototype.push()</a></h1>
-      <p><span class="syntax">arr.push(elements)</span> 把一个或多个元素添加到arr数组的尾部，如果添加元素有数组则把整个数组作为一个元素添加。</p>
+      <p><span class="syntax">arr.push(elements)</span> 把一个或多个元素添加到arr数组的尾部，如果添加元素有数组则把整个数组作为一个元素添加，返回添加的最后一个元素，修改原数组。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/pop" target="_blank">Array.prototype.pop()</a></h1>
-      <p><span class="syntax">arr.pop()</span> 删除并返回arr数组的最后一个元素。</p>
+      <p><span class="syntax">arr.pop()</span> 删除并返回arr数组的最后一个元素,修改原数组。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/unshift" target="_blank">Array.prototype.unshift()</a></h1>
@@ -56,7 +56,7 @@
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/join" target="_blank">Array.prototype.join()</a></h1>
-      <p><span class="syntax">arr.join(string)</span> 把数组中所有元素根据string参数值连接到一个字符串中，默认 ',' 隔开，string空字符串 '' 连接无间隔，不修改原数组。</p>
+      <p><span class="syntax">arr.join(string)</span> 把数组中所有元素根据string参数值连接到一个字符串中，默认 ',' 隔开，string空字符串 '' 连接无间隔，返回字符串，不修改原数组。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/some" target="_blank">Array.prototype.some()</a></h1>
