--- a/Js_API_String.html
+++ b/Js_API_String.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <title>Js_API_Array</title>
+  <title>Js_API_String</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type=”image/x-icon”/>
@@ -76,7 +76,7 @@
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/slice" target="_blank">String.prototype.slice()</a></h1>
-      <p><span class="syntax">str.slice([start,end])</span> 复制str数组指定部分并返回新字符串，不包括end，默认0到length，不修改原字符串。</p>
+      <p><span class="syntax">str.slice([start,end])</span> 复制str字符串指定部分并返回新字符串，不包括end，默认0到length，不修改原字符串。</p>
     </section>
     <section>
       <h1><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/split" target="_blank">String.prototype.split()</a></h1>
