--- a/index.html
+++ b/index.html
@@ -1,25 +1,65 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <title></title>
+  <title>first repository</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="css/css.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
   <style type="text/css">
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+
+    :root {
+      --line-height: 2.5rem;
+      --h1-font-size: 2rem;
+      --header-height: calc(var(--line-height) * 1.3);
+    }
+    
     html {
       font-size: 20px;
+    }
+
+    header {
+      height: var(--header-height);
+    }
+
+    article {
+      background: linear-gradient(0deg, #fff, #fff calc(var(--line-height) - 1px), #666 1px) 0 0/100% var(--line-height) repeat-y;
+      height: calc(100vh - var(--header-height) - var(--line-height));
+      margin: 0 auto;
+      width: calc(100vw - var(--line-height));
+
+      p {
+        line-height: var(--line-height);
+        text-indent: 2em;
+      }
+    }
+
+    h1 {
+      font-size: var(--h1-font-size);
+      line-height: var(--line-height);
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    footer {
+      height: var(--line-height);
     }
   </style>
 </head>
 <body>
-  <h1>我学习前端路上刚认识github的时候建的第一个repository</h1>
+  <header>
+    <h1>我学习前端路上刚认识github的时候建的第一个repository</h1>
+  </header>
+
+  <article>
+    <p></p>
+  </article>
+  
+  <footer></footer>
+  
   <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </body>
 </html>
